crates/toml_edit/tests/fixtures/invalid/integer-underscore-after.stderr
TOML parse error at line 1, column 11
  |
1 | bad = 123_
  |           ^
Invalid integer
Expected digit
